# arthur

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURE_IDEAS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  llm-benchmark.md  testing-strategy.md  web-ui.md
docs/design/: color-palette-review.md
examples/: README.md  led_matrix_face.py  servo_face.py
kindalive/: __init__.py  env_loader.py  main.py  robot.py
kindalive/config/: chemicals.toml  emotions.toml  face.toml  interpreter.toml  personalities.toml
kindalive/emotions/: emotion_vector.py  projection.py
kindalive/engine/: chemicals.py  clock.py  impulse.py  interactions.py  neurochemical_engine.py  seed_chemistry.py
kindalive/expression/: base.py  face.py  face_3d.py  face_image.py  text_output.py  web_ui.py
kindalive/expression/web_assets/: face3d.js  manifest.json  style.css
kindalive/interpreter/: anthropic_backend.py  event_router.py  fallback_rules.py  impulse_cache.py  llm_interpreter.py  openai_backend.py  prompt_builder.py  text_input.py  validator.py
kindalive/persistence/: state_store.py
kindalive/personality/: presets.py
scripts/: make_promo_gif.py  take_screenshot.py
tests/: conftest.py  test_chemicals.py  test_emotion_projection.py  test_env_loader.py  test_expression.py  test_face.py  test_face_3d.py  test_face_image.py  test_integration.py  test_interactions.py  test_mobile.py  test_persistence.py  test_properties.py  test_saturation.py  test_seed_chemistry.py  test_web_ui.py
tests/test_interpreter/: test_event_router.py  test_fallback_rules.py  test_freeform_paragraphs.py  test_freeform_prompt.py  test_full_pipeline.py  test_impulse_cache.py  test_llm_interpreter.py  test_openai_backend.py  test_prompt_builder.py  test_validator.py
