[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kindalive"
version = "0.1.0"
description = "Robot emotions through simulated neurochemistry — emotions are computed projections of a chemical state, never stored"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Smith", email = "smith.andrew.john@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "robotics",
    "emotions",
    "affective-computing",
    "neurochemistry",
    "simulation",
    "llm",
    "facs",
    "companion-robot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Robot Framework :: Library",
]
# The core library — engine, emotion projection, face projection, Robot —
# is pure Python with zero third-party dependencies. Everything optional
# (web dashboard, LLM backends) lives in extras below.
dependencies = []

[project.urls]
Homepage = "https://github.com/smithandrewjohn/Kindalive"
Documentation = "https://github.com/smithandrewjohn/Kindalive/tree/main/docs"
Source = "https://github.com/smithandrewjohn/Kindalive"
Issues = "https://github.com/smithandrewjohn/Kindalive/issues"

[project.optional-dependencies]
# The NiceGUI dashboard (LED face, chemical levels, emotion mix).
# httpx is included so the OpenAI-compatible backend works out of the box.
web = [
    # >=3.0 required: the face boot wiring serves NiceGUI's vendored
    # static bundle from its dist/ directory.
    "nicegui>=3.0",
    "httpx>=0.27",
]
# LLM interpreter backends. Install one (or both) to give the robot a brain.
anthropic = ["anthropic>=0.30"]
openai = ["httpx>=0.27"]
# Legacy alias, kept so `pip install -e ".[live]"` keeps working.
live = ["anthropic>=0.30"]
# Everything a user could want.
all = [
    "nicegui>=3.0",
    "httpx>=0.27",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["kindalive*"]

[tool.setuptools.package-data]
"kindalive.expression" = ["web_assets/*"]
"kindalive" = ["config/*.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: tests that require a live LLM API key",
    "integration: tests that require external API keys",
]

[tool.mypy]
strict = true
files = ["kindalive"]

[tool.coverage.run]
source = ["kindalive"]
# The web dashboard and LLM backends are exercised by integration/llm-marked
# tests and by hand; the coverage gate applies to the core library.
omit = [
    "kindalive/expression/web_ui.py",
    "kindalive/interpreter/anthropic_backend.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
